--- a/module2assignment/css/style.css
+++ b/module2assignment/css/style.css
@@ -8,7 +8,6 @@
   }
 
   h1 {
-    margin-bottom: 10px;
     font-size: 175%;
     font-family: Georgia, serif;
     text-align: center;
@@ -21,7 +20,7 @@
   .box-inner {
     border: 1px solid black;
     background-color: lightgray;
-    height: 150px;
+    height: 120px;
     margin: 10px;
     overflow: auto;
   }
@@ -34,6 +33,7 @@
     font-family: Georgia, serif;
     border-bottom: 1px solid black;
     border-left: 1px solid black;
+    margin-bottom: 5px;
   }
 
   .row {
@@ -43,7 +43,10 @@
 
   p {
     clear: both;
-    padding: 10px;
+    padding-top: -5px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
   }
 
   #chicken {
